src/objects/BDR_Qualitative_Score__c.object
<CustomObject>
    <fields>
        <fullName>Active_Listening__c</fullName>
        <inlineHelpText>The ability to actively adapt sales pitch to customer responses and maintain an open dialogue.</inlineHelpText>
        <label>Active Listening</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attitude__c</fullName>
        <inlineHelpText>Demonstrates positive attitude in all aspects of daily duties. Displays leadership desire and ability through daily activities</inlineHelpText>
        <label>Attitude</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDR_Active__c</fullName>
        <formula>BDR__r.IsActive</formula>
        <label>BDR: Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDR_Role__c</fullName>
        <formula>BDR__r.UserRole.Name</formula>
        <label>BDR: Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BDR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BDR_Qualitative_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Acumen__c</fullName>
        <inlineHelpText>Ability to discuss and understand prospects business objectives and how they relate to IT</inlineHelpText>
        <label>Business Acumen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coachability__c</fullName>
        <inlineHelpText>Demonstrates ability to pull information from others (including managers) and effectively adapt messaging/behavior “on the fly”.  Rarely needs to be reminded of strategy/tactics to improve performance.</inlineHelpText>
        <label>Coachability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <inlineHelpText>Understands competitors and capable of positioning VMTurbo against the opposition</inlineHelpText>
        <label>Competition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Development_Mentoring__c</fullName>
        <inlineHelpText>Consistently identifies areas for self-improvement, routinely seeks out others for professional development and productively mentors others</inlineHelpText>
        <label>Development/Mentoring</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Developmental_Notes__c</fullName>
        <label>Developmental Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developmental_Score__c</fullName>
        <formula>VALUE(TEXT(Attitude__c))+
VALUE(TEXT(Development_Mentoring__c))+
VALUE(TEXT(Coachability__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Developmental Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objection_Handling__c</fullName>
        <inlineHelpText>Ability to overcome customer objections on cold calls and discovery calls (competition, no pain, no money, no time)</inlineHelpText>
        <label>Objection Handling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operations__c</fullName>
        <inlineHelpText>Demonstrates velocity activity cadence and organization. Properly utilizes systems and tools as required (in particular, fluency in Salesforce, LinkedIn and other sales enablement tools)</inlineHelpText>
        <label>Operations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presentation_Skills__c</fullName>
        <inlineHelpText>Ability to confidently and professionally articulate themselves in business situations (including over the telephone)</inlineHelpText>
        <label>Presentation Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selling_Skills_Notes__c</fullName>
        <label>Selling Skills Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selling_Skills_Score__c</fullName>
        <formula>VALUE(TEXT(Business_Acumen__c))+
VALUE(TEXT(Technology__c))+
VALUE(TEXT(Competition__c))+
VALUE(TEXT(Objection_Handling__c))+
VALUE(TEXT(Operations__c))+
VALUE(TEXT(Presentation_Skills__c))+
VALUE(TEXT(Active_Listening__c))+
VALUE(TEXT(VMTurbo_Product__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selling Skills Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <inlineHelpText>Comprehensive understanding and ability to discuss IT landscape (trends, stack, roles, key players in organizations).  Generally converses fluently with IT managers regarding project initiatives and virtual environment management strategies.</inlineHelpText>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenure__c</fullName>
        <formula>BDR__r.Tenure_days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_BDR_Score__c</fullName>
        <formula>Selling_Skills_Score__c+Developmental_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total BDR Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VMTurbo_Product__c</fullName>
        <inlineHelpText>Ability to sell the demo to different roles and use cases</inlineHelpText>
        <label>VMTurbo Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BDR Qualitative Score</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BDR__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BDR Qualitative Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>